<resources>
    <string name="app_name">MyFriends</string>
    <string name="myfriends">MyFriends</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="hint1">hint</string>
    <string name="hint">hint</string>
    <string name="delete">Delete</string>
    <string name="back">Save</string>
    <string name="favourite">Favourite</string>
    <string name="add_friend">Add Friend</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="address" />
    <string name="title_activity_maps">Map</string>
    <string name="birthday">Birthday</string>
    <string name="mail">Mail</string>
    <string name="web">Web</string>
    <string name="peter_parker">Peter Parker</string>
    <string name="st_example_26">St. Example 26</string>
    <string name="_22_05_1997">22/05/1997</string>
    <string name="_123456789">123456789</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="www_example_com">www.example.com</string>
    <string name="todo">TODO</string>
</resources>