<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_purple"
    tools:layout_editor_absoluteY="81dp">

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="@+id/btn_call"
        app:layout_constraintTop_toTopOf="@+id/field_address"
        app:srcCompat="@drawable/ic_baseline_add_location_24"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/btn_map"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_home"
        app:layout_constraintTop_toTopOf="@+id/btn_home"
        app:srcCompat="@drawable/ic_baseline_map_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/edit_friend"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textview_style"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/name"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textview_style"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/address"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/textview_style"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/phone"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/textview_style"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/mail"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        style="@style/textview_style"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/birthday"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        style="@style/textview_style"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/web"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/btn_mail"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_sms"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_sms"
        app:layout_constraintTop_toTopOf="@+id/field_mail"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <ImageButton
        android:id="@+id/btn_sms"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_map"
        app:layout_constraintStart_toStartOf="@+id/btn_map"
        app:layout_constraintTop_toBottomOf="@+id/btn_home"
        app:srcCompat="@drawable/ic_baseline_sms_24" />

    <ImageButton
        android:id="@+id/btn_browser"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/field_web"
        app:layout_constraintTop_toTopOf="@+id/field_web"
        app:srcCompat="@drawable/ic_outline_explore_24" />

    <ImageButton
        android:id="@+id/btn_call"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="@+id/btn_browser"
        app:layout_constraintTop_toBottomOf="@+id/field_address"
        app:srcCompat="@drawable/ic_baseline_local_phone_24" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/field_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/cutive"
        android:hint="@string/peter_parker"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/field_address"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/cutive"
        android:hint="@string/st_example_26"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/field_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/field_phone"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/cutive"
        android:hint="@string/_123456789"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/field_address" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/field_mail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/cutive"
        android:hint="@string/example_gmail_com"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/field_phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/field_birthday"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/cutive"
        android:hint="@string/_22_05_1997"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/field_mail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/field_web"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="false"
        android:fontFamily="@font/cutive"
        android:hint="@string/www_example_com"
        android:linksClickable="true"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/field_birthday" />

    <Switch
        android:id="@+id/sw_Favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/favourite"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#A6D9F7"
        android:contentDescription="@string/todo"
        android:tint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/friendPicture"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintStart_toEndOf="@+id/btn_save"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#A6D9F7"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/delete"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_save" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#A6D9F7"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/back"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20194647" />

</androidx.constraintlayout.widget.ConstraintLayout>